--- a/washee_app/android/app/src/main/AndroidManifest.xml
+++ b/washee_app/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.washee_app">
    <application
+        android:name="${applicationName}"
         android:label="washee_app"
         android:icon="@mipmap/ic_launcher">
         <activity
