--- a/washee_web/docker-compose.yml
+++ b/washee_web/docker-compose.yml
@@ -12,14 +12,17 @@ services:
       - ./.env.dev
     depends_on:
       - db
+    links:
+      - db:db
   db:
     image: postgres:13.0-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
-      - POSTGRES_USER=hello_django
-      - POSTGRES_PASSWORD=hello_django
-      - POSTGRES_DB=hello_django_dev
-
+      - POSTGRES_DB=washee_web_dev
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=Mimtop9?
+    ports:
+      - 5432:5432
 volumes:
   postgres_data:
