--- a/washee_web/app/requirements.txt
+++ b/washee_web/app/requirements.txt
@@ -1,2 +1,8 @@
+asgiref==3.5.0
 Django==3.2.6
+djangorestframework==3.13.1
+gunicorn==20.1.0
 psycopg2-binary==2.9.1
+pytz==2021.3
+sqlparse==0.4.2
+typing_extensions==4.1.1
