--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -13,7 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Run tests and see if it can build for production
+    - name: Build, test and tear down containers
       working-directory: ./washee_web
       run: |
-        docker run
+        docker-compose up -d --build
+        docker-compose exec web pytest
+        docker-compose down -v
