--- a/washee_web/app/requirements.txt
+++ b/washee_web/app/requirements.txt
@@ -1,8 +1,21 @@
 asgiref==3.5.0
-Django==3.2.6
+atomicwrites==1.4.0
+attrs==21.4.0
+colorama==0.4.4
+Django==3.2.12
 djangorestframework==3.13.1
 gunicorn==20.1.0
+importlib-metadata==4.11.1
+iniconfig==1.1.1
+packaging==21.3
+pluggy==1.0.0
 psycopg2-binary==2.9.1
+py==1.11.0
+pyparsing==3.0.7
+pytest==7.0.1
+pytest-django==4.5.2
 pytz==2021.3
 sqlparse==0.4.2
+tomli==2.0.1
 typing_extensions==4.1.1
+zipp==3.7.0
