--- a/.gitignore
+++ b/.gitignore
@@ -304,3 +304,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# ------------------------------- NORDPOOL IGNORES --------------------------
+nordpool.json
+washee_web/app/ml_electricity/nordpool_API/data.csv
