--- a/washee_box/Dockerfile
+++ b/washee_box/Dockerfile
@@ -14,5 +14,6 @@ COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
 COPY . /src
-RUN  export FLASK_APP=washee-box-entry.py
+ENV FLASK_APP=washee-box-entry.py
+# RUN  export FLASK_APP=washee-box-entry.py
 CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0"]
