--- a/.github/workflows/box-ci.yml
+++ b/.github/workflows/box-ci.yml
@@ -17,4 +17,5 @@ jobs:
       working-directory: ./washee_box
       run: |
         docker build --tag box .
-        docker run box 
+        docker run box --name box
+        docker stop box
