--- a/.github/workflows/box-ci.yml
+++ b/.github/workflows/box-ci.yml
@@ -17,5 +17,5 @@ jobs:
       working-directory: ./washee_box
       run: |
         docker build --tag box .
-        docker run --name box --rm box        
+        docker run -d --name box --rm box        
         docker stop box
