--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,7 @@
 DEBUG=1
 SECRET_KEY=NotSoSecretKeyForDevelopmentServer
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+DJANGO_PORT=8000
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_PASSWORD=password
 DJANGO_SUPERUSER_EMAIL=some@mail.com
