--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3.8'
 
 services:
   web:
-    build: ./app
+    build: ./washee_web
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - ./app/:/usr/src/app/
+      - ./washee_web/:/usr/src/washee_web/
     ports:
       - 8000:8000
     env_file:
@@ -15,7 +15,7 @@ services:
     links:
       - db:db
   db:
-    image: postgres:13.0-alpine
+    image: postgres:latest
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
