Fixed django and db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,16 +15,22 @@ services:
     links:
       - db:db
   db:
-    image: postgres:latest
+    build: ./washee_db
+    restart: always
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
       - ./.env.dev
-    environment:
-      - POSTGRES_DB=$${DB_NAME}
-      - POSTGRES_USER=$${DB_USER}
-      - POSTGRES_PASSWORD=$${DB_PASSWORD}
     ports:
-      - 5432:5432
+      - 65432:5432
+  box:
+    build: ./washee_box
+    command: python3 -m flask run --host=0.0.0.0
+    volumes:
+      - ./washee_box/:/usr/src/washee_box/
+    ports:
+      - 8082:8082
+    env_file:
+      - ./.env.dev
 volumes:
   postgres_data:
