--- a/.env.dev
+++ b/.env.dev
@@ -12,3 +12,6 @@ DB_PASSWORD=password
 DB_HOST=db
 DB_PORT=5432
 DATABASE=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_DB=washee_web_dev
