--- a/.env.dev
+++ b/.env.dev
@@ -11,7 +11,15 @@ DB_USER=postgres
 DB_PASSWORD=password
 DB_HOST=db
 DB_PORT=5432
+
 DATABASE=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_DB=washee_web_dev
+
+BOX_DEBUG=1
+BOX_PORT=5000
+BOX_HOST=0.0.0.0
+
+BACKEND_ENDPOINT=SomeLocalhost
+BOX_ENDPOINT=SomeLocalhost
