--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,11 +25,19 @@ services:
       - 65432:5432
   box:
     build: ./washee_box
-    command: python3 -m flask run --host=0.0.0.0
     volumes:
       - ./washee_box/:/usr/src/washee_box/
     ports:
-      - 8082:8082
+      - 5000:5000
+    env_file:
+      - ./.env.dev
+  app:
+    build: ./washee_app
+    restart: always
+    volumes:
+      - ./washee_app/:/usr/src/washee_app/
+    ports:
+      - 5000:5000
     env_file:
       - ./.env.dev
 volumes:
