--- a/.github/workflows/box-ci.yml
+++ b/.github/workflows/box-ci.yml
@@ -15,7 +15,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build, run, test and tear down
       run: |
-        docker-compose build
-        docker-compose run -d box
+        docker-compose up -d --build box
         docker-compose exec -T box pytest       
         docker-compose down -v
