--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 DEBUG=1
 SECRET_KEY=NotSoSecretKeyForDevelopmentServer
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+DJANGO_HOST_PORT=8000
 DJANGO_PORT=8000
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_PASSWORD=password
@@ -10,6 +11,7 @@ DB_NAME=washee_web_dev
 DB_USER=postgres
 DB_PASSWORD=password
 DB_HOST=db
+DB_HOST_PORT=65432
 DB_PORT=5432
 
 DATABASE=postgres
@@ -18,8 +20,10 @@ POSTGRES_PASSWORD=password
 POSTGRES_DB=washee_web_dev
 
 BOX_DEBUG=1
+BOX_HOST_PORT=5000
 BOX_PORT=5000
 BOX_HOST=0.0.0.0
 
+MOBILE_DEBUG=1
 BACKEND_ENDPOINT=SomeLocalhost
 BOX_ENDPOINT=SomeLocalhost
