--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@ version: '3.8'
 services:
   web:
     build: ./washee_web
-    command: python manage.py runserver 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:${DJANGO_PORT}
     volumes:
       - ./washee_web/:/usr/src/washee_web/
     ports:
-      - 8000:8000
+      - "${DJANGO_HOST_PORT}:${DJANGO_PORT}"
     env_file:
-      - ./.env.dev
+      - ./.env
     depends_on:
       - db
     links:
@@ -20,16 +20,26 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ./.env.dev
+      - ./.env
     ports:
-      - 65432:5432
+      - "${DB_HOST_PORT}:${DB_PORT}"
   box:
     build: ./washee_box
     volumes:
       - ./washee_box/:/usr/src/washee_box/
-    ports:
-      - 5000:5000
     env_file:
-      - ./.env.dev
+      - ./.env
+    ports:
+      - "${BOX_HOST_PORT}:${BOX_PORT}"
+  #NOT POSSIBLE, nor necessary, at the moment.
+  #app:
+  #  build: ./washee_app
+  #  command: flutter run web-server --web-port ????
+  #  volumes:
+  #    - ./washee_app/:/usr/src/washee_app/
+  #  ports:
+  #    - ????:????
+  #  env_file:
+  #    - ./.env
 volumes:
   postgres_data:
