--- a/.env.dev
+++ b/.env.dev
@@ -25,5 +25,7 @@ BOX_PORT=5000
 BOX_HOST=0.0.0.0
 
 MOBILE_DEBUG=1
+MOBILE_WEB_PORT=3000
+MOBILE_HOST_PORT=3000
 BACKEND_ENDPOINT=SomeLocalhost
 BOX_ENDPOINT=SomeLocalhost
