Move everything and make way for a master compose (#66)
* Move everything and make way for a master compose

* Fixed django and db

* Working db and web, trying to get box to work as development

* Cleanup the code, still missing flutter directed to correct port

* Add better description to README

* Remove flutter Docker, since it was too large and not needed

* Add tests to box

* Change the workflows

* Change workflow

* Update environment variables to be able to be passed down

* Revert changes and write more in README

* Update box port to 7000

--- a/.github/workflows/box-ci.yml
+++ b/.github/workflows/box-ci.yml
@@ -13,9 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Move into correct folder
-      working-directory: ./washee_box
+    - name: Build, run, test and tear down
       run: |
-        docker build --tag box .
-        docker run -d --name box --rm box        
-        docker stop box
+        docker-compose up -d --build box
+        docker-compose exec -T box pytest       
+        docker-compose down -v
