--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -13,10 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Setup, build, test and tear down containers
+    - name: Build, run, test and tear down
       working-directory: ./washee_web
       run: |
-        chmod +x app/entrypoint.sh
-        docker-compose up -d --build
+        chmod +x entrypoint.sh
+        docker-compose up -d --build web
         docker-compose exec -T web pytest
         docker-compose down -v
