--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-# -------------------- CUSTOM IGNORES -------------------
-# Python should ignore "lib" folders, however, flutter uses a "lib" folder that should not be ignored
-washee_web/**/lib/**
-washee_box/**/lib/**
-
-
 # -------------------- DOCKER IGNORES -------------------
 # Docker project generated files to ignore
 #  if you want to ignore files created by your editor/tools,
@@ -250,7 +244,6 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
 .venv
 env/
 venv/
@@ -289,6 +282,19 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# ------------------------------- NORDPOOL IGNORES --------------------------
+# -------------------- CUSTOM IGNORES -------------------
+# Python should ignore "lib" folders, however, flutter uses a "lib" folder that should not be ignored
+washee_web/**/lib/**
+washee_box/**/lib/**
+
+# These contain the secrets used to access nordpools api
 nordpool.json
+
+# This is a large datafile that gets created, and shouldnt be uploaded 
 washee_web/app/ml_electricity/nordpool_API/data.csv
+
+# These files have all the variables for the production environment
+.env.prod.db
+.env.prod.box
+.env.prod.web
+.env.prod.app
