--- a/washee_box/requirements.txt
+++ b/washee_box/requirements.txt
@@ -3,6 +3,7 @@ attrs==21.4.0
 click==8.0.4
 colorama==0.4.4
 colorzero==2.0
+dateutils==0.6.12
 Flask==2.0.3
 gpiozero==1.6.2
 importlib-metadata==4.11.1
@@ -15,6 +16,9 @@ pluggy==1.0.0
 py==1.11.0
 pyparsing==3.0.7
 pytest==7.0.1
+python-dateutil==2.8.2
+pytz==2021.3
+six==1.16.0
 tomli==2.0.1
 typing-extensions==4.1.1
 Werkzeug==2.0.3
