Initial test of new image

--- a/washee_web/Dockerfile
+++ b/washee_web/Dockerfile
@@ -1,5 +1,5 @@
 # pull official base image
-FROM python:3.9.6-alpine
+FROM nickgryg/alpine-pandas
 
 # set work directory
 WORKDIR /usr/src/washee_web
