--- a/washee_web/pytest.ini
+++ b/washee_web/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
+env_files = .env.dev
 DJANGO_SETTINGS_MODULE = washee_web.settings
 python_files = tests.py test_*.py *_tests.py *_test.py
 addopts = --ignore=env
