--- a/docker-compose.web.yml
+++ b/docker-compose.web.yml
@@ -22,7 +22,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ./.env.dev
+      - ./.env.prod.db
     ports:
       - 65432:5432
   nginx:
