--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,4 +17,8 @@ server {
         alias /home/washee_web/web/staticfiles/;
     }
 
+    location /media/ {
+        alias /home/washee_web/web/mediafiles/;
+    }
+
 }
