--- a/washee_web/Dockerfile.prod
+++ b/washee_web/Dockerfile.prod
@@ -40,6 +40,7 @@ ENV HOME=/home/washee_web
 ENV APP_HOME=/home/washee_web/web
 RUN mkdir $APP_HOME
 RUN mkdir $APP_HOME/staticfiles
+RUN mkdir $APP_HOME/mediafiles
 WORKDIR $APP_HOME
 
 # install dependencies
