Update to using debian

--- a/washee_web/Dockerfile.prod
+++ b/washee_web/Dockerfile.prod
@@ -1,7 +1,7 @@
 # BUILDER #
 
 # pull official base image
-FROM python:3.9.6-alpine as builder
+FROM python:3.9.5-slim as builder
 
 # set work directory
 WORKDIR /usr/src/washee_web
@@ -11,14 +11,14 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 # install psycopg2 dependencies
-RUN apk update \
-    && apk add postgresql-dev gcc python3-dev musl-dev
+RUN apt-get update \
+    && apt-get -y install build-essential libssl-dev libffi-dev libblas3 libc6 liblapack3 gcc python3-dev python3-pip cython \
+    && apt-get -y install libpq-dev gcc \
+    && apt install -y netcat
 
 # lint
 RUN pip install --upgrade pip
-RUN pip install flake8==3.9.2
 COPY . .
-#RUN flake8 --ignore=E501,F401 .
 
 # install dependencies
 COPY ./requirements.txt .
@@ -27,13 +27,13 @@ RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/washee_web/wheels -r
 # FINAL #
 
 # pull official base image
-FROM python:3.9.6-alpine
+FROM python:3.9.5-slim
 
 # create directory for the app user
 RUN mkdir -p /home/washee_web
 
 # create the washee_web user
-RUN addgroup -S washee_web && adduser -S washee_web -G washee_web
+RUN adduser --system --group washee_web
 
 # create the appropriate directories
 ENV HOME=/home/washee_web
@@ -43,8 +43,11 @@ RUN mkdir $APP_HOME/staticfiles
 RUN mkdir $APP_HOME/mediafiles
 WORKDIR $APP_HOME
 
-# install dependencies
-RUN apk update && apk add libpq
+# install psycopg2 dependencies
+RUN apt-get update \
+    && apt-get -y install build-essential libssl-dev libffi-dev libblas3 libc6 liblapack3 gcc python3-dev python3-pip cython \
+    && apt-get -y install libpq-dev gcc \
+    && apt install -y netcat
 COPY --from=builder /usr/src/washee_web/wheels /wheels
 COPY --from=builder /usr/src/washee_web/requirements.txt .
 RUN pip install --no-cache /wheels/*
