--- a/.env.dev
+++ b/.env.dev
@@ -23,6 +23,7 @@ BOX_DEBUG=1
 BOX_HOST_PORT=8001
 BOX_PORT=5000
 BOX_HOST=0.0.0.0
+MAX_WASHING_TIME_IN_SEC=5
 
 MOBILE_DEBUG=1
 MOBILE_WEB_PORT=3000
