--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - ./.env.dev
     ports:
       - 65432:5432
-  box:
+  boxes:
     build: ./washee_box
     command: python washee-box-entry.py
     volumes:
