--- a/washee_app/ios/Runner/Info.plist
+++ b/washee_app/ios/Runner/Info.plist
@@ -42,5 +42,15 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_dartobservatory._tcp</string>
+	</array>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>Washee needs access to your local network in order to start a washing machine</string>
+	<key>com.apple.developer.networking.wifi-info</key>
+	<string>Washee needs access to your local network in order to start a washing machine</string>
+	<key>com.apple.developer.networking.multipath</key>
+	<string>Washee needs access to your local network and mobile in order to start a washing machine and connect to the server</string>
 </dict>
 </plist>
