--- a/.github/workflows/box-ci.yml
+++ b/.github/workflows/box-ci.yml
@@ -14,4 +14,5 @@ jobs:
       - name: Build, run, test and tear down
         run: |
           docker-compose up -d --build box
+          docker-compose exec -T box pytest
           docker-compose down -v
