--- a/washee_web/Dockerfile
+++ b/washee_web/Dockerfile
@@ -1,5 +1,5 @@
 # pull official base image
-FROM python:3.9.5-slim
+FROM python:3.7.6-slim
 
 # set work directory
 WORKDIR /usr/src/washee_web
@@ -10,7 +10,7 @@ ENV PYTHONUNBUFFERED 1
 
 # install psycopg2 dependencies
 RUN apt-get update \
-    && apt-get -y install build-essential libssl-dev libffi-dev libblas3 libc6 liblapack3 gcc python3-dev python3-pip cython \
+    && apt-get -y install build-essential libssl-dev libffi-dev libblas3 libc6 liblapack3 python3-dev python3-pip cython \
     && apt-get -y install libpq-dev gcc \
     && apt install -y netcat
 
