--- a/washee_web/Dockerfile.prod
+++ b/washee_web/Dockerfile.prod
@@ -1,7 +1,7 @@
 # BUILDER #
 
 # pull official base image
-FROM python:3.9.5-slim as builder
+FROM python:3.7.6-slim as builder
 
 # set work directory
 WORKDIR /usr/src/washee_web
@@ -14,7 +14,7 @@ ENV PYTHONUNBUFFERED 1
 RUN apt-get update \
     && apt-get -y install build-essential libssl-dev libffi-dev libblas3 libc6 liblapack3 gcc python3-dev python3-pip cython \
     && apt-get -y install libpq-dev gcc \
-    && apt install -y netcat
+    && apt install -y netcat python3-scipy python3-numpy
 
 # lint
 RUN pip install --upgrade pip
@@ -27,7 +27,7 @@ RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/washee_web/wheels -r
 # FINAL #
 
 # pull official base image
-FROM python:3.9.5-slim
+FROM python:3.7.6-slim
 
 # create directory for the app user
 RUN mkdir -p /home/washee_web
