--- a/washee_web/Dockerfile.prod
+++ b/washee_web/Dockerfile.prod
@@ -12,9 +12,10 @@ ENV PYTHONUNBUFFERED 1
 
 # install psycopg2 dependencies
 RUN apt-get update \
-    && apt-get -y install build-essential libssl-dev libffi-dev libblas3 libc6 liblapack3 gcc python3-dev python3-pip cython \
-    && apt-get -y install libpq-dev gcc \
-    && apt install -y netcat python3-scipy python3-numpy python-pandas python-sklearn
+    && apt install -y netcat \
+    && apt-get install -y\
+    build-essential libssl-dev libffi-dev libblas3 libc6 liblapack3 gcc python3-dev python3-pip cython libpq-dev gcc jq \
+    unzip
 
 # lint
 RUN pip install --upgrade pip
@@ -45,9 +46,10 @@ WORKDIR $APP_HOME
 
 # install psycopg2 dependencies
 RUN apt-get update \
-    && apt-get -y install build-essential libssl-dev libffi-dev libblas3 libc6 liblapack3 gcc python3-dev python3-pip cython \
-    && apt-get -y install libpq-dev gcc \
-    && apt install -y netcat python3-scipy python3-numpy python-pandas python-sklearn
+    && apt install -y netcat \
+    && apt-get install -y\
+    build-essential libssl-dev libffi-dev libblas3 libc6 liblapack3 gcc python3-dev python3-pip cython libpq-dev gcc jq \
+    unzip
 COPY --from=builder /usr/src/washee_web/wheels /wheels
 COPY --from=builder /usr/src/washee_web/requirements.txt .
 RUN pip install --no-cache /wheels/*
