--- a/washee_web/requirements.txt
+++ b/washee_web/requirements.txt
@@ -14,9 +14,9 @@ isort==5.10.1
 joblib==1.1.0
 lazy-object-proxy==1.7.1
 mccabe==0.6.1
-numpy==1.21.5
+#numpy==1.21.5
 packaging==21.3
-pandas==1.3.5
+#pandas==1.3.5
 platformdirs==2.5.1
 pluggy==1.0.0
 psycopg2-binary==2.9.1
@@ -29,8 +29,8 @@ pytest-mock==3.7.0
 python-dateutil==2.8.2
 python-dotenv==0.19.2
 pytz==2021.3
-scikit-learn==1.0.2
-scipy==1.7.3
+#scikit-learn==1.0.2
+#scipy==1.7.3
 six==1.16.0
 sqlparse==0.4.2
 threadpoolctl==3.1.0
