--- a/washee_box/Dockerfile
+++ b/washee_box/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-FROM python:3
+FROM python:3.7.6-slim
 
 RUN apt-get update
 RUN apt-get install -y --no-install-recommends
