Update production security

--- a/.env.dev
+++ b/.env.dev
@@ -1,11 +1,14 @@
 DEBUG=1
 SECRET_KEY=NotSoSecretKeyForDevelopmentServer
+DJANGO_CSRF_COOKIE=0
+DJANGO_SESSION_COOKIE=0
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 DJANGO_HOST_PORT=8000
 DJANGO_PORT=8000
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_PASSWORD=password
 DJANGO_SUPERUSER_EMAIL=admin@mail.com
+DJANGO_ADMIN_URL=^washee_admin/
 DB_ENGINE=django.db.backends.postgresql
 DB_NAME=washee_web_dev
 DB_USER=postgres
