--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,17 +1,32 @@
 upstream washee_web {
-    server web:8000;
+    server 127.0.0.1:8000;
 }
 
 server {
 
     listen 80;
+    server_name www.washeeweb.ml;
+    server_tokens off;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 
     location / {
-        proxy_pass http://washee_web;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
+        return 301 https://$host$request_uri;
     }
+}
+
+server {
+
+    listen 443 ssl;
+    server_name www.washeeweb.ml;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/washee_web/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/washee_web/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location /static/ {
         alias /home/washee_web/web/staticfiles/;
@@ -19,6 +34,9 @@ server {
 
     location /media/ {
         alias /home/washee_web/web/mediafiles/;
-    }
+    }    
 
+    location / {
+        proxy_pass http://washee_web;
+    }
 }
