--- a/docker-compose.web.yml
+++ b/docker-compose.web.yml
@@ -32,21 +32,22 @@ services:
     volumes:
       - static_volume:/home/washee_web/web/staticfiles
       - media_volume:/home/washee_web/web/mediafiles
-      - ./certbot/www:/var/www/certbot/:ro
-      - ./certbot/conf/:/etc/nginx/ssl/:ro
+      - ./nginx/certbot/conf:/etc/letsencrypt
+      - ./nginx/certbot/www:/var/www/certbot
     ports:
       - 80:80
       - 443:443
+    env_file:
+      - ./.env.prod.nginx
     depends_on:
       - web
   certbot:
     image: certbot/certbot:latest
     volumes:
-      - ./certbot/www/:/var/www/certbot/:rw
-      - ./certbot/conf/:/etc/letsencrypt/:rw
+      - ./nginx/certbot/conf:/etc/letsencrypt
+      - ./nginx/certbot/www:/var/www/certbot
 
 volumes:
   postgres_data:
   static_volume:
   media_volume:
-  certbot:
