--- a/washee_app/pubspec.yaml
+++ b/washee_app/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   cached_network_image: ^3.1.0
   flutter_screenutil: ^5.0.0+2
   flutter_svg: ^0.22.0
+  intl: ^0.17.0
   
 dev_dependencies:
   flutter_test:
