Update letsencrypt script

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,7 @@ upstream washee_web {
 server {
 
     listen 80;
-    server_name www.washeeweb.ml;
+    server_name www.emilbruun.dk;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -20,7 +20,7 @@ server {
 server {
 
     listen 443 ssl;
-    server_name www.washeeweb.ml;
+    server_name www.emilbruun.dk;
     server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/washee_web/fullchain.pem;
