--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,42 +1,20 @@
-upstream washee_web {
-    server 127.0.0.1:8000;
+upstream washeeweb {
+    server web:8000;
 }
 
 server {
 
     listen 80;
-    server_name www.emilbruun.dk;
-    server_tokens off;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
     location / {
+        proxy_pass http://washeeweb;
+    }
+    
+    location /somewhere/ {
         return 301 https://$host$request_uri;
-    }
-}
-
-server {
-
-    listen 443 ssl;
-    server_name www.emilbruun.dk;
-    server_tokens off;
-
-    ssl_certificate /etc/letsencrypt/live/washee_web/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/washee_web/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    location /static/ {
-        alias /home/washee_web/web/staticfiles/;
-    }
-
-    location /media/ {
-        alias /home/washee_web/web/mediafiles/;
-    }    
-
-    location / {
-        proxy_pass http://washee_web;
     }
 }
