--- a/washee_web/Dockerfile.prod
+++ b/washee_web/Dockerfile.prod
@@ -1,7 +1,7 @@
 # BUILDER #
 
 # pull official base image
-FROM python:3.7.6-slim as builder
+FROM debian:10.3-slim as builder
 
 # set work directory
 WORKDIR /usr/src/washee_web
@@ -12,23 +12,42 @@ ENV PYTHONUNBUFFERED 1
 
 # install psycopg2 dependencies
 RUN apt-get update \
-    && apt install -y netcat \
-    && apt-get install -y\
-    build-essential libssl-dev libffi-dev libblas3 libc6 liblapack3 gcc python3-dev python3-pip cython libpq-dev gcc jq \
-    unzip
+    && apt-get upgrade -y \
+    && apt-get autoremove -y \
+    && apt-get install -y \
+      gcc \
+      python3 \
+      build-essential \
+      zlib1g-dev \
+      wget \
+      unzip \
+      cmake \
+      python3-dev \
+      python3-pip \
+      python3-numpy \
+      python3-pandas \
+      gfortran \
+      libssl-dev \
+      libffi-dev \
+      libc6 \
+      libblas-dev \
+      liblapack-dev \
+      libatlas-base-dev \
+      libpq-dev \
+    && apt-get clean
 
-# lint
-RUN pip install --upgrade pip
+# Install 
+RUN pip3 install --upgrade pip
 COPY . .
 
 # install dependencies
 COPY ./requirements.txt .
-RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/washee_web/wheels -r requirements.txt
+RUN pip3 wheel --no-cache-dir --no-deps --wheel-dir /usr/src/washee_web/wheels -r requirements.txt
 
 # FINAL #
 
 # pull official base image
-FROM python:3.7.6-slim
+FROM debian:10.3-slim
 
 # create directory for the app user
 RUN mkdir -p /home/washee_web
@@ -46,16 +65,36 @@ WORKDIR $APP_HOME
 
 # install psycopg2 dependencies
 RUN apt-get update \
-    && apt install -y netcat \
-    && apt-get install -y\
-    build-essential libssl-dev libffi-dev libblas3 libc6 liblapack3 gcc python3-dev python3-pip cython libpq-dev gcc jq \
-    unzip
+    && apt-get upgrade -y \
+    && apt-get autoremove -y \
+    && apt-get install -y \
+      gcc \
+      python3 \
+      build-essential \
+      zlib1g-dev \
+      wget \
+      unzip \
+      cmake \
+      python3-dev \
+      python3-pip \
+      python3-numpy \
+      python3-pandas \
+      gfortran \
+      libssl-dev \
+      libffi-dev \
+      libc6 \
+      libblas-dev \
+      liblapack-dev \
+      libatlas-base-dev \
+      libpq-dev \
+    && apt-get clean
+ 
 COPY --from=builder /usr/src/washee_web/wheels /wheels
 COPY --from=builder /usr/src/washee_web/requirements.txt .
 
 # Install wheels made by the builder
-RUN pip install --upgrade pip
-RUN pip install --no-cache /wheels/*
+RUN pip3 install --upgrade pip
+RUN pip3 install --no-cache /wheels/*
 
 # copy entrypoint.prod.sh
 COPY ./entrypoint.prod.sh .
