--- a/washee_web/requirements.txt
+++ b/washee_web/requirements.txt
@@ -3,6 +3,7 @@ astroid==2.9.3
 atomicwrites==1.4.0
 attrs==21.4.0
 colorama==0.4.4
+cython
 Django==3.2.12
 django-admin-honeypot==1.1.0
 django-cors-headers==3.11.0
@@ -14,9 +15,9 @@ isort==5.10.1
 joblib==1.1.0
 lazy-object-proxy==1.7.1
 mccabe==0.6.1
-#numpy==1.21.5
+numpy==1.21.5
 packaging==21.3
-#pandas==1.3.5
+pandas==1.3.5
 platformdirs==2.5.1
 pluggy==1.0.0
 psycopg2-binary==2.9.1
@@ -29,8 +30,8 @@ pytest-mock==3.7.0
 python-dateutil==2.8.2
 python-dotenv==0.19.2
 pytz==2021.3
-#scikit-learn==1.0.2
-#scipy==1.7.3
+scikit-learn==1.0.2
+scipy==1.7.3
 six==1.16.0
 sqlparse==0.4.2
 threadpoolctl==3.1.0
@@ -41,3 +42,4 @@ typing_extensions==4.1.1
 tzdata==2021.5
 wrapt==1.13.3
 zipp==3.7.0
+ 
