Working authorization and REST API call!

--- a/.env.dev
+++ b/.env.dev
@@ -2,7 +2,7 @@ DEBUG=1
 SECRET_KEY=NotSoSecretKeyForDevelopmentServer
 DJANGO_CSRF_COOKIE=0
 DJANGO_SESSION_COOKIE=0
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1] 10.0.2.2
 DJANGO_HOST_PORT=8000
 DJANGO_PORT=8000
 DJANGO_SUPERUSER_USERNAME=admin
