--- a/washee_app/pubspec.yaml
+++ b/washee_app/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_screenutil: ^5.0.0+2
   flutter_svg: ^0.22.0
   intl: ^0.17.0
+  flutter_dotenv: ^5.0.2
   
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,7 @@ flutter:
   assets:
     - assets/images/
     - assets/data/machine_list.json
+    - .env.dev
 
   fonts:
     - family: Poppins
