--- a/.github/workflows/mobile-ci.yml
+++ b/.github/workflows/mobile-ci.yml
@@ -27,7 +27,6 @@ jobs:
     - name: Run flutter commands
       working-directory: ./washee_app
       run: |
-        touch .env.dev
-        flutter pub get
-        flutter test --dart-define=ENVIRONMENT=DEV
-        flutter build apk --debug --dart-define=ENVIRONMENT=PROD
+        flutter pub get --release
+        flutter test --release
+        flutter build apk --release
