--- a/.gitignore
+++ b/.gitignore
@@ -300,6 +300,7 @@ nordpool.json
 
 # These files have all the variables for sensitive information in mobile app
 washee_app/.env.dev
+washee_app/.env.prod
 
 # Hide the certbot used to verify https connection
 nginx/certbot
