--- a/washee_app/pubspec.yaml
+++ b/washee_app/pubspec.yaml
@@ -66,6 +66,8 @@ flutter:
     - assets/images/
     - assets/data/machine_list.json
     - .env.dev
+    - .env.prod
+    - .env.default
 
   fonts:
     - family: Poppins
