Automagic wifi connect (#143)
* added update account to web communicator

* made it possible to update a users account

* fixed validation for login

* Initial wifi testing

* Add working NetworkInfo that can connect to wifi programmatically

* Migrate to secure environment variables

* Update NetworkInfo to use secret wifi information

* Create usecases and register them

* Ask for wifi permission when changing page, but hopefully only ones

* Remove from homescreen

* Make automatic wifi ready

* Create empty dev environment file to make CI happy

* Change CI to see if release can be build

* Change environment

* Update environments

* Make wifi connection more robust and bound to usecases

* Make CI possible to run

* Non saved merges not being commited first time

Co-authored-by: mkju19 <mkju19@student.aau.dk>

--- a/.github/workflows/mobile-ci.yml
+++ b/.github/workflows/mobile-ci.yml
@@ -27,6 +27,16 @@ jobs:
     - name: Run flutter commands
       working-directory: ./washee_app
       run: |
+        echo "WEB_API_HOST=http://localhost:8000" > .env.dev
+        echo "BOX_API_HOST=http://localhost:8001" >> .env.dev
+        echo "BOX_WIFI_SSID=boxNetworkName" >> .env.dev
+        echo "BOX_WIFI_PASSWORD=boxNetworkPassword" >> .env.dev
+        echo "BOX_HAS_INTERNET=true" >> .env.dev
+        echo "Necessary production environment to satisfy flutter assets" > .env.prod
         flutter pub get
-        flutter test --dart-define=ENVIRONMENT=DEV
-        flutter build apk --debug --dart-define=ENVIRONMENT=PROD
+        flutter test
+        flutter build apk --debug 
+
+
+
+
