--- a/washee_app/pubspec.yaml
+++ b/washee_app/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_screenutil: ^5.0.0+2
   flutter_svg: ^0.22.0
   intl: ^0.17.0
+  flutter_dotenv: ^5.0.2
   flutter_secure_storage: ^5.0.2
   
 dev_dependencies:
@@ -65,6 +66,8 @@ flutter:
   assets:
     - assets/images/
     - assets/data/machine_list.json
+    - .env.dev
+    - .env.prod
 
   fonts:
     - family: Poppins
