Different Bug Fixes (#182)
* refactors the unlock usecase to implement check for wifi connection and box connection

* adds user message

* Change time to danish time

* Present correct information in CalendarView

* Now updates ones own account rather than always account 1

* Fix cant activate if no money bug and only get unactivated bookings bug

* Multiple fixes, but the booking systems time is broken

* Multiple small changes

* Changes

* Load data

* changes

* Working timezone file

* Time should work now, but testing still needed

* Change account error

* Remove prints

* Make tests pass (not kosher)

* Remove TODOs

Co-authored-by: Rallefar1103 <rasmus@turftank.com>

--- a/washee_app/pubspec.yaml
+++ b/washee_app/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   intl: ^0.17.0
   flutter_dotenv: ^5.0.2
   flutter_secure_storage: ^5.0.2
+  timezone: ^0.8.0
   
 dev_dependencies:
   flutter_test:
@@ -66,6 +67,7 @@ flutter:
   assets:
     - assets/images/
     - assets/data/machine_list.json
+    - assets/2021a.tzf
     - .env.dev
     - .env.prod
 
